# calligraph-release

./: README.md  pyproject.toml
calligraph/: ase_palette.py  bezier.py  bspline.py  clipper.py  config.py  dce.py  diffvg_utils.py  fs.py  geom.py  image_losses.py  imaging.py  ood_saliency.py  plut.py  sd.py  segmentation.py  spline_losses.py  stroke_init.py  svg.py  tsp_art.py  ttf.py  util.py
calligraph/contrib/: sd_step.py
examples/: demo_area_fill_01.py  demo_vectorize_01.py
